--- a/Application/app/src/main/res/layout/activity_main.xml
+++ b/Application/app/src/main/res/layout/activity_main.xml
@@ -56,10 +56,10 @@
         android:id="@+id/seekBar3"
         android:layout_width="111dp"
         android:layout_height="26dp"
-        android:layout_marginStart="48dp"
-        android:layout_marginLeft="48dp"
         android:progressBackgroundTint="@color/colorFont"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.17"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.934" />
