--- a/Application/app/src/main/res/layout/activity_main.xml
+++ b/Application/app/src/main/res/layout/activity_main.xml
@@ -16,10 +16,10 @@
         android:gravity="center"
         android:text="@string/sound"
         android:textColor="@color/colorFont"
-        android:textSize="20dp"
-        app:layout_constraintBottom_toTopOf="@+id/seekBar3"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/seekBar_sound"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.793"
+        app:layout_constraintHorizontal_bias="0.796"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0" />
@@ -31,7 +31,7 @@
         android:background="@drawable/outline_background"
         android:text="@string/Storage"
         android:textColor="@color/colorFont"
-        android:textSize="25dp"
+        android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -53,7 +53,7 @@
         app:layout_constraintVertical_bias="0.431" />
 
     <SeekBar
-        android:id="@+id/seekBar3"
+        android:id="@+id/seekBar_brightness"
         android:layout_width="111dp"
         android:layout_height="26dp"
         android:progressBackgroundTint="@color/colorFont"
@@ -62,17 +62,17 @@
         app:layout_constraintHorizontal_bias="0.17"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.934" />
+        app:layout_constraintVertical_bias="0.934" tools:targetApi="lollipop"/>
 
     <SeekBar
-        android:id="@+id/seekBar4"
+        android:id="@+id/seekBar_sound"
         android:layout_width="110dp"
         android:layout_height="26dp"
         android:progressBackgroundTint="@color/colorFont"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.633"
-        app:layout_constraintStart_toEndOf="@+id/seekBar3"
+        app:layout_constraintStart_toEndOf="@+id/seekBar_brightness"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.934" />
 
@@ -83,8 +83,8 @@
         android:gravity="center"
         android:text="@string/bright"
         android:textColor="@color/colorFont"
-        android:textSize="20dp"
-        app:layout_constraintBottom_toTopOf="@+id/seekBar3"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/seekBar_brightness"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.181"
         app:layout_constraintStart_toStartOf="parent"
