last rubish 2-screen version

--- a/Application/app/src/main/res/layout/second_activity.xml
+++ b/Application/app/src/main/res/layout/second_activity.xml
@@ -24,7 +24,7 @@
         android:id="@+id/combo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/outline_background"
+        android:background="@color/colorPrimary"
         android:text="@string/imcombo"
         android:textAllCaps="false"
         android:textColor="@color/colorFont"
@@ -41,7 +41,7 @@
         android:id="@+id/perclick"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/outline_background"
+        android:background="@color/colorPrimary"
         android:text="@string/perclick"
         android:textAllCaps="false"
         android:textColor="@color/colorFont"
@@ -58,7 +58,7 @@
         android:id="@+id/crit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/outline_background"
+        android:background="@color/colorPrimary"
         android:text="@string/imcrit"
         android:textAllCaps="false"
         android:textColor="@color/colorFont"
@@ -90,7 +90,7 @@
         android:layout_width="43dp"
         android:layout_height="43dp"
         android:layout_marginTop="16dp"
-        android:background="@drawable/outline_background"
+        android:background="@color/colorPrimary"
         android:text="@string/_2"
         android:textColor="@color/colorFont"
         android:textOff="@string/_2"
@@ -107,9 +107,9 @@
         android:id="@+id/_4"
         android:layout_width="43dp"
         android:layout_height="43dp"
-        android:background="@drawable/outline_background"
+        android:background="@color/colorPrimary"
         android:text="@string/_4"
-        android:textColor="@color/colorFont"
+        android:textColor="@color/colorClose"
         android:textOff="@string/_4"
         android:textOn="@string/_4"
         android:textSize="20sp"
@@ -124,9 +124,9 @@
         android:id="@+id/_8"
         android:layout_width="43dp"
         android:layout_height="43dp"
-        android:background="@drawable/outline_background"
+        android:background="@color/colorPrimary"
         android:text="@string/_8"
-        android:textColor="@color/colorFont"
+        android:textColor="@color/colorClose"
         android:textOff="@string/_8"
         android:textOn="@string/_8"
         android:textSize="20sp"
@@ -141,9 +141,9 @@
         android:id="@+id/_6"
         android:layout_width="43dp"
         android:layout_height="43dp"
-        android:background="@drawable/outline_background"
+        android:background="@color/colorPrimary"
         android:text="@string/_6"
-        android:textColor="@color/colorFont"
+        android:textColor="@color/colorClose"
         android:textOff="@string/_6"
         android:textOn="@string/_6"
         android:textSize="20sp"
@@ -158,9 +158,9 @@
         android:id="@+id/_9"
         android:layout_width="43dp"
         android:layout_height="43dp"
-        android:background="@drawable/outline_background"
+        android:background="@color/colorPrimary"
         android:text="@string/_9"
-        android:textColor="@color/colorFont"
+        android:textColor="@color/colorClose"
         android:textOff="@string/_9"
         android:textOn="@string/_9"
         android:textSize="20sp"
@@ -175,9 +175,9 @@
         android:id="@+id/_7"
         android:layout_width="43dp"
         android:layout_height="43dp"
-        android:background="@drawable/outline_background"
+        android:background="@color/colorPrimary"
         android:text="@string/_7"
-        android:textColor="@color/colorFont"
+        android:textColor="@color/colorClose"
         android:textOff="@string/_7"
         android:textOn="@string/_7"
         android:textSize="20sp"
@@ -192,9 +192,9 @@
         android:id="@+id/_5"
         android:layout_width="43dp"
         android:layout_height="43dp"
-        android:background="@drawable/outline_background"
+        android:background="@color/colorPrimary"
         android:text="@string/_5"
-        android:textColor="@color/colorFont"
+        android:textColor="@color/colorClose"
         android:textOff="@string/_5"
         android:textOn="@string/_5"
         android:textSize="20sp"
@@ -209,7 +209,7 @@
         android:id="@+id/_1"
         android:layout_width="43dp"
         android:layout_height="43dp"
-        android:background="@drawable/outline_background"
+        android:background="@color/colorClose"
         android:text="@string/_1"
         android:textColor="@color/colorFont"
         android:textOff="@string/_1"
@@ -226,9 +226,9 @@
         android:id="@+id/_3"
         android:layout_width="43dp"
         android:layout_height="43dp"
-        android:background="@drawable/outline_background"
+        android:background="@color/colorPrimary"
         android:text="@string/_3"
-        android:textColor="@color/colorFont"
+        android:textColor="@color/colorClose"
         android:textOff="@string/_3"
         android:textOn="@string/_3"
         android:textSize="20sp"
