--- a/Application/app/src/main/res/layout/activity_main.xml
+++ b/Application/app/src/main/res/layout/activity_main.xml
@@ -26,12 +26,13 @@
 
     <TextView
         android:id="@+id/storage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/outline_background"
+        android:layout_width="100dp"
+        android:layout_height="40dp"
+        android:background="@color/colorPrimary"
         android:text="@string/Storage"
         android:textColor="@color/colorFont"
         android:textSize="25sp"
+        android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
